--- a/README
+++ b/README
@@ -68,7 +68,7 @@ CONFIGURATION
 
 CONTACT INFO
 
-    email:  staf@digibel.org
+    email:  stafwag@yahoo.com
     
     Future improvements will be available at http://stafwag.f2g.net
     
