--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+* version 1.0rc5pre2     ( 16 Jan 2002 )
+  + new pam conversation function
+  + new set_PAM_CHANGE_EXPIRED_AUTHOK directive
+
 * version 1.0rc5pre1     ( 20 Dec 2001 )
   + cracklib support
   + support for all common pam messages ( cracklib, minimum password length etc )
