--- a/README
+++ b/README
@@ -70,5 +70,5 @@ CONTACT INFO
 
     email:  stafwag@yahoo.com
     
-    Future improvements will be available at http://stafwag.f2g.net
+    Future improvements will be available at http://stafwag.home7.dk3.com
     
