--- a/README
+++ b/README
@@ -68,7 +68,7 @@ CONFIGURATION
 
 CONTACT INFO
 
-    email:  stafwag@yahoo.com
+    email:  staf.wagemakers@advalvas.be
     
-    Future improvements will be available at http://stafwag.home7.dk3.com
+    Future improvements will be available at http://stafwag.netfirms.com
     
