--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+* version 1.0.0
+  + faq
+  + documentation update
+  + new install script
+
 * version 1.0.0pre1.2    ( 3 Apr 2002 )
   + more logging in debug mode
   + documentation update
