--- a/INSTALL
+++ b/INSTALL
@@ -5,15 +5,21 @@ NOTE
 
 SUPPORTED SYSTEMS
 
-    cgipaf has been tested with Debian GNU/Linux (potato and woody) and
-    Solaris 8 and should work on other Un*ces with pam support. Systems
-    without pam support are only supported if they use the standard  
+    cgipaf has been tested with Debian GNU/Linux (potato and woody),
+    Solaris 8, FreeBSD and should work on other Un*ces with pam support. 
+    Systems without pam support are only supported if they use the standard  
     password file location /etc/passwd /etc/shadow and standard crypt or
     md5 passwords.
 
     If you're using cgipaf on a system without pam support a lock file
     /var/lock/cgipaf.lock is used. The directory /var/lock have to exist
     on our system or you can modify pass.h to your own needs.
+
+    FreeBSD is also supported, although FreeBSD has PAM support the
+    PAM password changer doesn't seem to work on FreeBSD. Add 
+    "--host=freebsd"  to compile CGIpaf with FreeBSD support. This
+    will compile CGIpaf without PAM support but with built-in BSD
+    support.
 
     CGIpaf depends on the ndbm or compatible library. The GNU dbm library
     is also supported and is automatically detected by configure.
@@ -25,6 +31,8 @@ INSTALLATION
           ./configure --bindir=/usr/local/apache/cgi-bin \ 
                       --datadir=/usr/local/apache/htdocs/cgipaf \ 
                       --sysconfdir=/etc/cgipaf
+    
+    add "--host=freebsd" to compile CGIpaf with freeBSD support
     
     Update the above command with your real cgi-bin and htdocs directory
 
