--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+* version 1.0.1rc1       ( 21 May 2002 )
+  + updates to configure
+  + documentation update
+
 * version 1.0.1rc1pre2   ( 17 May 2002 ) 
   + FreeBSD support
 
