--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+* version 1.0.1          (  4 Jun 2002 )
+  + improved cracklib detection
+
 * version 1.0.1rc1       ( 21 May 2002 )
   + updates to configure
   + documentation update
