--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+* version 1.1.0pre1      ( 18 Jun 2002 )
+  + new run_before_mailcfg and run_after_mailcfg directive
+  + new use_statefile directive
+
 * version 1.0.1          (  4 Jun 2002 )
   + improved cracklib detection
 
