--- a/INSTALL
+++ b/INSTALL
@@ -112,10 +112,10 @@ CONFIGURATION
     length etc.).
     
     CGIpaf deletes the user's .procmailrc! If your users use procmail to
-    distribute thier maillingslists into seperate mailboxes etc, it is possible
+    distribute their mailings-lists into separate mailboxes etc, it is possible
     to copy the user's .procmailrc to a backup file and copy it back when
-    mailforwarding and autoreply is disabled. Set "use_statefile" to "yes" to
-    avoid that the orginal procmail config confuses CGIpaf and use 
+    mail-forwarding and autoreply is disabled. Set "use_statefile" to "yes" to
+    avoid that the original procmail config confuses CGIpaf and use 
     "run_before_mailcfg" to copy the user's procmail config to a backup file
     and "run_after_mailcfg" to restore it. See Configuration for more 
     information.
