--- a/README
+++ b/README
@@ -74,5 +74,5 @@ CONTACT INFO
 
     email:  staf.wagemakers@advalvas.be
     
-    Future improvements will be available at http://stafwag.netfirms.com
+    Future improvements will be available at http://staf.patat.org
     
