--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
 * version 1.1.0pre2      ( 26 Jun 2002 )
-  + new run_mailcfg directive added to support other mail configuration than 
+  + new run_mailcfg directive added to support other mail configurations than 
     procmail a sample script with vacation support is included.
 
 * version 1.1.0pre1      ( 18 Jun 2002 )
