--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+* version 1.1.0pre3      (    Jul 2002 )
+  + changepass utility added
+
 * version 1.1.0pre2      ( 26 Jun 2002 )
   + new run_mailcfg directive added to support other mail configurations than 
     procmail a sample script with vacation support is included.
