--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-* version 1.1.0pre3      (    Jul 2002 )
+* version 1.1.0rc1      (  15 Jul 2002 )
   + changepass utility added
 
 * version 1.1.0pre2      ( 26 Jun 2002 )
