--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+* version 1.1.0rc2      (  06 Aug 2002 )
+  + The ability to list words in /etc/cgipasswd that should not be a part of
+    new passwords  ( Thanks to Daniel R for his patch )
+
+* version 1.1.0rc2pre1  (  24 Jul 2002 )
+  + FIXED: run_after_mailcfg was executed before the mail configuration
+
 * version 1.1.0rc1      (  15 Jul 2002 )
   + changepass utility added
 
