--- a/changelog
+++ b/changelog
@@ -86,7 +86,7 @@
   + fixed: mailcfg.cgi crashed if the syslog directive wasn't set
   + fixed: setgid() failed because it was performed after setuid()
 
-* version 1.0.rc3 ( 18 oct 2001)
+* version 1.0rc3 ( 18 oct 2001)
   + improved PAM detection ( thanks to Gary for reporting his installation
     problem )
   + loglevel + debug messages
