--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+* version 1.2.0pre1     ( 24 Oct 2002 )
+  + Access Control List added ( AclOrder, AllowUsers, AllowGroups, DenyUsers
+    DenyGroups directives )
+
 * version 1.1.0         ( 17 Sep 2002 )
   + Documentation update
 
