setreuid added to cgipaf.c ( higher PAM compatibilty ), email address updated

--- a/README
+++ b/README
@@ -72,7 +72,7 @@ CONFIGURATION
 
 CONTACT INFO
 
-    email:  staf.wagemakers@advalvas.be
+    email:  staf@patat.org
     
     Future improvements will be available at http://staf.patat.org
     
