--- a/INSTALL
+++ b/INSTALL
@@ -80,9 +80,6 @@ CONFIGURATION
     The cracklib_dictpath is the path to the dictionary filename without the 
     extension ( .pwi ), not the directory path.
 
-    If cgipaf fails to update your password, try to set
-    "set_PAM_CHANGE_EXPIRED_AUTHTOK" to off. 
-
     With the "pam_service" directive you can set the pam service name, if not
     set "passwd" is used. The passwd pam service ( /etc/pam.d/passwd ) usually 
     doesn't have an entry for user authentication, therefor /etc/pam.d/other 
@@ -107,9 +104,8 @@ CONFIGURATION
 
     If your system don't support md5 passwords remove md5 in the password line.
     
-    If "set_PAM_CHANGE_EXPIRED_AUTHTOK" is to "on" passwd.cgi support all 
-    pam opties in the PAM configuration (cracklib, minimum/ maximum password 
-    length etc.).
+    passwd.cgi should support all pam opties in the PAM configuration 
+    (cracklib, minimum/ maximum password length etc.).
     
     CGIpaf deletes the user's .procmailrc! If your users use procmail to
     distribute their mailings-lists into separate mailboxes etc, it is possible
