--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+* version 1.2.0RC1      ( 26 Nov 2002 )
+  + setreuid(user_uid,0) added in cgipaf.c 
+    passwd.cgi should now support all pam opties in the PAM configuration 
+    (cracklib, minimum/ maximum password length etc.) on all PAM supported
+    systems.
+
+  + The set_PAM_CHANGE_EXPIRED_AUTHTOK is obsolete and will be removed in 
+    the next releases of CGIpaf
+
 * version 1.2.0pre1     ( 24 Oct 2002 )
   + Access Control List added ( AclOrder, AllowUsers, AllowGroups, DenyUsers
     DenyGroups directives )
