--- a/changelog
+++ b/changelog
@@ -1,8 +1,8 @@
 * version 1.2.0RC1      ( 26 Nov 2002 )
   + setreuid(user_uid,0) added in cgipaf.c 
-    passwd.cgi should now support all pam opties in the PAM configuration 
-    (cracklib, minimum/ maximum password length etc.) on all PAM supported
-    systems.
+    passwd.cgi should now support all pam options in the PAM configuration 
+    (cracklib, minimum/ maximum password length etc.) on all systems with PAM
+    support.
 
   + The set_PAM_CHANGE_EXPIRED_AUTHTOK is obsolete and will be removed in 
     the next releases of CGIpaf
