--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+* version 1.2.0         (  7 Dec 2002)
+  + 1.2.0RC1 has been released as 1.2.0
+
 * version 1.2.0RC1      ( 26 Nov 2002 )
   + setreuid(user_uid,0) added in cgipaf.c 
     passwd.cgi should now support all pam options in the PAM configuration 
