--- a/INSTALL
+++ b/INSTALL
@@ -5,24 +5,29 @@ NOTE
 
 SUPPORTED SYSTEMS
 
-    cgipaf has been tested with Debian GNU/Linux (potato and woody),
-    Solaris 8, FreeBSD and should work on other Un*ces with pam support. 
-    Systems without pam support are only supported if they use the standard  
-    password file location /etc/passwd /etc/shadow and standard crypt or
-    md5 passwords.
+    cgipaf has been tested with Debian GNU/Linux (woody), Solaris 8, FreeBSD 
+    and should work on other Un*ces with pam support. Systems without pam 
+    support are only supported if they use the standard password file 
+    location /etc/passwd /etc/shadow and standard crypt or md5 passwords.
 
     If you're using cgipaf on a system without pam support a lock file
     /var/lock/cgipaf.lock is used. The directory /var/lock have to exist
     on our system or you can modify pass.h to your own needs.
+    
+    Operating systems types and versions aren't automatically detected 
+    by configure - I know should upgrade autoconf -, so you've to use 
+    "--host=" parameter to compile CGIpaf for *BSD.
 
-    FreeBSD is also supported, although FreeBSD has PAM support the
-    PAM password changer doesn't seem to work on FreeBSD. Add 
-    "--host=freebsd" to configure to compile CGIpaf with FreeBSD support. 
+    FreeBSD and NetBSD are supported, OpenBSD is not (yet) supported. Although 
+    FreeBSD has PAM support the PAM password changer doesn't seem to work on 
+    FreeBSD. Add "--host=freebsd" to configure to compile CGIpaf with FreeBSD 
+    support. or "--host=netbsd" to compile CGIpaf with NetBSD support.
     This will compile CGIpaf without PAM support but with built-in BSD
     support.
 
     CGIpaf depends on the ndbm or compatible library. The GNU dbm library
     is also supported and is automatically detected by configure.
+
 
 INSTALLATION
 
@@ -32,7 +37,8 @@ INSTALLATION
                       --datadir=//etc/cgipaf/data \ 
                       --sysconfdir=/etc/cgipaf
     
-    add "--host=freebsd" to compile CGIpaf with freeBSD support
+    add "--host=freebsd" to compile CGIpaf with freeBSD support.
+    add "--host=netbsd"  to compile CGIpaf with NetBSD support.
     
     Update the above command with your real cgi-bin and htdocs directory
 
