--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+* version 1.3.0pre3    ( 28 Apr 2003 )
+
+  + BUGFIX: setuid(0) added before the passwd run_success script, to
+    re-enable smbpasswd support. which was broken in the previous release.
+
 * version 1.3.0pre2    ( 31 Mar 2003 )
   
   + NetBSD support
