--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+* version 1.3.0pre4    ( 30 May 2003 )
+  + new forward method to avoid mail looping
+
 * version 1.3.0pre3    ( 28 Apr 2003 )
 
   + BUGFIX: setuid(0) added before the passwd run_success script, to
