--- a/INSTALL
+++ b/INSTALL
@@ -25,6 +25,10 @@ SUPPORTED SYSTEMS
     This will compile CGIpaf without PAM support but with built-in BSD
     support.
 
+    All Solaris versions before Solaris 9 are supported, there is a problem
+    with PAM on Solaris 9 - I didn't had the the time to debug it - but
+    you're still able to use CGIpaf without PAM support ( --disable-pam ).
+
     CGIpaf depends on the ndbm or compatible library. The GNU dbm library
     is also supported and is automatically detected by configure.
 
