--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+* version 1.2.3	        ( 29 Sep 2003 )
+  + new forward method to avoid mail looping (merged from 1.3.0pre4)
+  + update to configure to support gdbm 1.8.1+
+
 * version 1.2.2		( 28 Apr 2003 )
   + BUGFIX: setuid(0) added before the passwd run_success script, to re-enable
     smbpasswd support. which was broken in the previous release.
