--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-* version 1.3.0cvs20031220
+* version 1.3.0rc1
   + autoconf has been upgrade to 2.55: the build host is autodetected
   + new variables:
         _POST[] array : An associative array of variables with the original
