--- a/changepass.man
+++ b/changepass.man
@@ -12,10 +12,10 @@
 \fBchangepass\fP is a chpasswd clone, it might be useful on 
 platforms that doesn't have such a command like Solaris.
 .br 
-Most GNU/Linux distributions have chpasswd (8), FreeBSD has 
-a similar chpass command but many commercial Un*xen doesn't 
-have tool like this.  An alternative is to update the user's 
-password in script with \fBusermod\fP
+Most GNU/Linux distributions have chpasswd (8), on FreeBSD 
+you can use "pw usermod name -h 0" but many commercial Un*ces
+doesn't have tool like this.  An alternative is to update the 
+user's password in script with \fBusermod\fP
 .br
 but it's possible to see the encrypted password in the process
 list, which is not very secure.
