--- a/ChangeLog
+++ b/ChangeLog
@@ -1,23 +1,24 @@
-* version 1.3.0rc1
-  + autoconf has been upgrade to 2.55: the build host is autodetected
+* version 1.3.0rc1	( 6 Jan 2004 )
+  + autoconf has been upgraded to 2.57: the build host is auto-detected
   + new variables:
         _POST[] array : An associative array of variables with the original
 	                HTTP POST
         post_string   : A string with the original HTTP POST
 	message       : A string with the default message
   + new directives to enable more advanced mail configuration scripts:
-    run_viewmailcfg, mailcfg_check. a sample script is included.
-  + "set_script_filename" and "unset_script_filename" directives
+    run_viewmailcfg, mailcfg_check. a sample perl vacation script is included.
+  + set_script_filename and unset_script_filename directives 
+    ( useful if you want to use a php script )
 
-* version 1.3.0pre4    ( 30 May 2003 )
+* version 1.3.0pre4    	( 30 May 2003 )
   + new forward method to avoid mail looping
 
-* version 1.3.0pre3    ( 28 Apr 2003 )
+* version 1.3.0pre3    	( 28 Apr 2003 )
 
   + BUGFIX: setuid(0) added before the passwd run_success script, to
     re-enable smbpasswd support. which was broken in the previous release.
 
-* version 1.3.0pre2    ( 31 Mar 2003 )
+* version 1.3.0pre2    	( 31 Mar 2003 )
   
   + NetBSD support
   + BUGFIX: 1.3.0pre1 didn't compile on FreeBSD
