--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+* version 1.3.0	        ( 26 Apr 2004 )
+  + Documentation updated
+
+* version 1.3.0rc2	( 10 Mar 2004 )
+  + PAM: the pam functions should now work on Solaris 9+ 
+
 * version 1.3.0rc1	( 6 Jan 2004 )
   + autoconf has been upgraded to 2.57: the build host is auto-detected
   + new variables:
@@ -32,7 +38,7 @@
      - code cleanup
 
 * version 1.3.0pre1     (  2 Jan 2003 )
-  + linuxconf virtual mail password files supported added
+  + linuxconf virtual mail password files support added
 
 * version 1.2.0         (  7 Dec 2002)
   + 1.2.0RC1 has been released as 1.2.0 
