--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,10 @@
 * version 1.3.1		( 13 jul 2004 )
-  + BUGFIX: --disable-pam didn't work in the previous release
-  + BUGFIX: previous release did't compile on non-PAM systems 
-            (Thanks to Peter Huebert for reporting this problem)
-  + BUGFIX: install.sh didn't create the cgi-bin directory
+  + BUGFIX: install.sh will now ask to create the cgi-bin directory
             (Thanks to Koen de Jong for reporting this problem)
-  + example in Dutch added ( Thanks to Koen de Jonge )   
+  + BUGFIX: configure --disable-pam works now on PAM systems
+  + BUGFIX: fixed compile problem on non-PAM systems
+            (Thanks to Peter Hübert for reporting this problem)
+  + Dutch translation added  (Thanks to Koen de Jonge)   
 
 * version 1.3.0	        ( 26 Apr 2004 )
   + Documentation updated
