patat.org -> wagemakers.be

--- a/README
+++ b/README
@@ -69,7 +69,9 @@ CONFIGURATION
 
 CONTACT INFO
 
-    email:  staf@patat.org
+    email:  staf@wagemakers.be
     
-    Future improvements will be available at http://staf.patat.org/cgipaf/
+    Future improvements will be available at 
+    http://www.wagemakers.be/english/programs/cgipaf/
+
     
