--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* version 1.3.4pre1	( ?? ??? 2013 )
+  + Enable PAM on FreeBSD 7.3 or above  
+  + Enable PAM on NetBSD 6.0 or above
+  + xmalloc updated to support systems with non GNU compatible malloc
+
 * version 1.3.3		( 24 Jan 2008 )
   + BUGFIX: md5 passwords on BIG ENDIAN systems were not calculated correctly
 
