--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-* version 1.3.4pre1	( ?? ??? 2013 )
+* version 1.3.4pre1	( 15 Sep 2013 )
   + Enable PAM on FreeBSD 7.3 or above  
   + Enable PAM on NetBSD 6.0 or above
   + xmalloc updated to support systems with non GNU compatible malloc
