--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* version 1.3.5		( ?? ??? 2016)
+  + BUGFIX: pwd_mkdb errors were not handled correctly on BSD 
+  + kyua test scripts added 
+
 * version 1.3.4		( 23 Nov 2014 )
   + Cracklib configuration checking has been improved
   + LDFLAGS is passed to the linker correctly
