--- a/AUTHORS
+++ b/AUTHORS
@@ -13,5 +13,8 @@ Daniel R.,
  * created a patch with the ability to list words in /etc/cgipaf.conf that 
    should not be a part of new passwords.
 
+Fabricio Machado
+  * Brazilian Portuguese translation
+
 Koen de Jonge
   * Dutch translation
