--- a/changepass.man
+++ b/changepass.man
@@ -52,7 +52,11 @@ cat user_password_pairs | changepass
 Written by Staf Wagemakers <staf@wagemakers.be>
     
 .SH COPYRIGHT
-Copyright (c)2002, 2007 Staf Wagemakers.
+Copyright (c) 2002, 2007 Staf Wagemakers.
+.br
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Public License, Version  2  or  any later
+version published by the Free Software Foundation.
 .br    
 You are free to distribute this software under the terms of the 
 GNU General Public License. The complete text of the GNU General
