--- a/examples/README
+++ b/examples/README
@@ -5,6 +5,13 @@ cgipaf-pt_br:  php files translated to Brazilian Portuguese by Fabricio Machado
 vacation:      vacation configuration example
 vacation-cgi:  vacation configuration example
 
+COPYRIGHT NOTICE
+
+Copyright (c) 2002, 2004 Staf Wagemakers
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Public License, Version  2  or  any later
+version published by the Free Software Foundation.
 ~
 ~
 ~
