--- a/examples/vacation/README
+++ b/examples/vacation/README
@@ -1,2 +1,10 @@
 cgipaf with vacation support example.
 copy mailcfg.pl to /etc/cgipaf/scripts and modify it for your own needs
+
+COPYRIGHT NOTICE
+
+Copyright (c) 2002 Staf Wagemakers
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Public License, Version  2  or  any later
+version published by the Free Software Foundation.
