--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,12 @@ Fabricio Machado
 
 Koen de Jonge
   * Dutch translation
+
+
+COPYRIGHT NOTICE
+
+  Copyright (c) 2002 - 2020 Staf Wagemakers
+
+  Permission is granted to copy, distribute and/or modify this document
+  under the terms of the GNU Public License, Version  2  or  any later
+  version published by the Free Software Foundation.
