--- a/ChangeLog
+++ b/ChangeLog
@@ -194,3 +194,12 @@
 
 * version 1.0rc1 ( 18 Aug 2001 )
   + initial release
+
+
+COPYRIGHT NOTICE
+
+	Copyright (c) 2002 - 2020 Staf Wagemakers
+
+	Permission is granted to copy, distribute and/or modify this document
+	under the terms of the GNU Public License, Version  2  or  any later
+	version published by the Free Software Foundation.
