--- a/examples/vacation_cgi/README
+++ b/examples/vacation_cgi/README
@@ -1,1 +1,9 @@
 CGIpaf vacation example mailcfg.pl is a standard cgi perl script.
+
+COPYRIGHT NOTICE
+
+Copyright (c) 2002 Staf Wagemakers
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Public License, Version  2  or  any later
+version published by the Free Software Foundation.
