updated the documentation license to "the FreeBSD documentation license"

--- a/examples/vacation_cgi/README
+++ b/examples/vacation_cgi/README
@@ -2,8 +2,35 @@ CGIpaf vacation example mailcfg.pl is a standard cgi perl script.
 
 COPYRIGHT NOTICE
 
-Copyright (c) 2002 Staf Wagemakers
+   The documentation for CGIpaf is licensed under the terms of
+   the FreeBSD Documentation License.
 
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Public License, Version  2  or  any later
-version published by the Free Software Foundation.
+   The FreeBSD Documentation License
+
+   Copyright (c) 2002 - 2020 Staf Wagemakers.
+
+   Redistribution and use in source (Markdown, plaintext, et. al.) and
+   "compiled" forms (HTML, PDF and so forth) with or without
+   modification, are permitted provided that the following conditions
+   are met:
+
+   Redistributions of source code (Markdown, plaintext, et. al.) must 
+   retain the above copyright notice, this list of conditions and the
+   following disclaimer as the first lines of this file unmodified.
+
+   Redistributions in compiled form (HTML, PDF and so on) must reproduce
+   the above copyright notice, this list of conditions and the following
+   disclaimer in the documentation and/or other materials provided with
+   the distribution.
+
+   THIS DOCUMENTATION IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED 
+   WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF 
+   MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. 
+   IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+   DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+   DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
+   GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+   INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
+   IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+   OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS DOCUMENTATION,
+   EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
