--- a/README
+++ b/README
@@ -16,7 +16,60 @@ BUGS
     
 LICENSE
 
-    GNU General Public License.
+    SOFTWARE
+   
+      CGIpaf (the software) is licensed under the terms of
+      the GNU General Public License version 2 or later.
+
+      Copyright (c) 2002 - 2020 Staf Wagemakers.
+
+      This program is free software: you can redistribute it and/or modify
+      it under the terms of the GNU General Public License as published by
+      the Free Software Foundation, either version 3 of the License, or
+      (at your option) any later version.
+
+      This program is distributed in the hope that it will be useful,
+      but WITHOUT ANY WARRANTY; without even the implied warranty of
+      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+      GNU General Public License for more details.
+
+      You should have received a copy of the GNU General Public License
+      along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+    DOCUMENTATION
+
+      The documentation for CGIpaf is licensed under the terms of
+      the FreeBSD Documentation License.
+
+      The FreeBSD Documentation License
+
+      Copyright (c) 2002 - 2020 Staf Wagemakers.
+
+      Redistribution and use in source (Markdown, plaintext, et. al.) and
+      "compiled" forms (HTML, PDF and so forth) with or without
+      modification, are permitted provided that the following conditions
+      are met:
+
+      Redistributions of source code (Markdown, plaintext, et. al.) must 
+      retain the above copyright notice, this list of conditions and the
+      following disclaimer as the first lines of this file unmodified.
+
+      Redistributions in compiled form (HTML, PDF and so on) must reproduce
+      the above copyright notice, this list of conditions and the following
+      disclaimer in the documentation and/or other materials provided with
+      the distribution.
+
+      THIS DOCUMENTATION IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED 
+      WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF 
+      MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. 
+      IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+      DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+      DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
+      GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+      INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
+      IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+      OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS DOCUMENTATION,
+      EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 INSTALLATION
 
@@ -67,13 +120,6 @@ COPYRIGHT
 
     Copyright (c) 2002, 2007 Staf Wagemakers.
 
-    Permission is granted to copy, distribute and/or modify this document
-    under the terms of the GNU Public License, Version  2  or  any later
-    version published by the Free Software Foundation.
-
-    You are free to distribute this software under the terms of the 
-    GNU General Public License. The complete text of the GNU General
-    Public License can be found at http://www.gnu.org/licenses/gpl.html
 
 CONFIGURATION
  
